--- a/package/win32/doclib/history.txt
+++ b/package/win32/doclib/history.txt
@@ -5,12 +5,13 @@ Hot Soup Processor ver3.32beta                      HSP : Hot Soup Processor
 
 ・hsp3関連 更新履歴
 
-	2012/12/03 3.32β1
+	2012/12/05 3.32β1
 
 	Windows8(x64)上でウインドウを閉じた際にCランタイムエラーが発生する不具合を修正
 	[HSP3Dish] オートスケーリング使用時にタッチ位置がずれる不具合を修正
 	[hsp3dh] Androidビルド時にhspフォルダからソーススクリプトを検索するように修正
 	[hsp3dh] Androidビルド時に長いWarningで内部エラーが発生する不具合を修正
+	[HSP3Dish][iOS] Retinaディスプレイ対応のためのオプションを追加
 
 	2012/09/05 3.31
 
