--- a/package/win32/doclib/history.txt
+++ b/package/win32/doclib/history.txt
@@ -5,8 +5,9 @@ Hot Soup Processor ver3.32beta                      HSP : Hot Soup Processor
 
 ・hsp3関連 更新履歴
 
-	2012/12/12 3.32β2
+	2012/12/18 3.32β2
 
+	onexit gosubによるウインドウ終了処理で正しく終了しない不具合を修正
 	oncmdによるウインドウ終了処理を入れた場合に正しく動作しない不具合を修正
 	[HSP3Dish][iOS] iHSP17フォルダに余計なファイルが含まれていたのを修正
 	[HSP3Dish][iOS] Retinaディスプレイでないモードでタッチ座標がずれる不具合を修正
