--- a/package/win32/doclib/history.txt
+++ b/package/win32/doclib/history.txt
@@ -9,6 +9,7 @@ Hot Soup Processor ver3.32beta                      HSP : Hot Soup Processor
 
 	onexit gosubによるウインドウ終了処理で正しく終了しない不具合を修正
 	oncmdによるウインドウ終了処理を入れた場合に正しく動作しない不具合を修正
+	HGIMG3ランタイムのogg再生でDirectSoundソフトウェアバッファを使用する設定に修正
 	[HSP3Dish][iOS] iHSP17フォルダに余計なファイルが含まれていたのを修正
 	[HSP3Dish][iOS] Retinaディスプレイでないモードでタッチ座標がずれる不具合を修正
 
