--- a/package/win32/doclib/history.txt
+++ b/package/win32/doclib/history.txt
@@ -1,9 +1,14 @@
 ------------------------------------------------------------------------------
-Hot Soup Processor ver3.32beta                      HSP : Hot Soup Processor  
+Hot Soup Processor ver3.32                          HSP : Hot Soup Processor  
 更新履歴                              copyright 1997-2013 (c) onion software  
 ------------------------------------------------------------------------------
 
 ・hsp3関連 更新履歴
+
+	2013/02/18 3.32
+
+	終了処理でWM_QUITメッセージが渡されない不具合を修正
+	ドキュメントの一部修正
 
 	2013/01/29 3.32RC1
 
