--- a/package/win32/doclib/history.txt
+++ b/package/win32/doclib/history.txt
@@ -5,6 +5,15 @@ Hot Soup Processor ver3.32                          HSP : Hot Soup Processor
 
 ・hsp3関連 更新履歴
 
+	2013/04/09 3.34b1
+
+	[HSP3Dish] iOS、Android及びWindows7以降でマルチタッチの取得に対応
+	[HSP3Dish] gzoom命令のマイナスサイズ指定での画像反転に対応
+
+	2013/04/09 3.32b
+
+	[HGIMG3] fv関連命令及びクリーンアップ処理の不具合を修正
+
 	2013/03/01 3.32a
 
 	プロセスが残ることがあった終了処理を再度修正
