--- a/package/win32/doclib/history.txt
+++ b/package/win32/doclib/history.txt
@@ -27,6 +27,7 @@ Hot Soup Processor ver3.4                           HSP : Hot Soup Processor
 	2013/02/18 3.32
 
 	終了処理でWM_QUITメッセージが渡されない不具合を修正
+	[HGIMG3] str2fv命令で不正な文字列が入力された場合の変換方法を修正
 	ドキュメントの一部修正
 
 	2013/01/29 3.32RC1
@@ -34,6 +35,7 @@ Hot Soup Processor ver3.4                           HSP : Hot Soup Processor
 	β2のウインドウ終了処理不具合をさらに修正
 	#defcfuncで定義したユーザー関数内で終了できない不具合を修正
 	exec命令で指定するファイル名の文字列サイズを無制限に修正
+	[HGIMG3] ogg再生時はDirectSoundソフトウェアバッファをデフォルトで使用するように修正
 	[HGIMG3] ogg再生時のDirectSoundソフトウェアバッファを使用スイッチを追加
 	[HGIMG3] ogg再生時のストリームバッファサイズ設定を追加
 
