--- a/package/win32/doclib/history.txt
+++ b/package/win32/doclib/history.txt
@@ -5,7 +5,7 @@ Hot Soup Processor ver3.4                           HSP : Hot Soup Processor
 
 ・hsp3関連 更新履歴
 
-	2013/04/09 3.34β1
+	2013/04/16 3.4β1
 
 	[HSP3Dish][iOS] iAdによる広告収益アプリに対応
 	[HSP3Dish] 特定のデバイス制御用のdevinfo,devprm,devcontrol命令を追加
@@ -14,8 +14,9 @@ Hot Soup Processor ver3.4                           HSP : Hot Soup Processor
 	[HSP3Dish] iOS、Android及びWindows7以降でマルチタッチ情報取得に対応
 	[HSP3Dish] gzoom命令のマイナスサイズ指定での画像反転に対応
 
-	2013/04/09 3.32b
+	2013/04/16 3.32b
 
+	[スクリプトエディタ] アンドゥ、リドゥ時に編集バッファが壊れる不具合を修正
 	[HGIMG3] fv関連命令及びクリーンアップ処理の不具合を修正
 	[HSP3Dish] Windows版で終了後にプロセスが残ることがある不具合を修正
 
