--- a/package/win32/doclib/history.txt
+++ b/package/win32/doclib/history.txt
@@ -7,6 +7,7 @@ Hot Soup Processor ver3.4                           HSP : Hot Soup Processor
 
 	2013/04/16 3.4β1
 
+	llmod3/winver.hspでエラーが発生する不具合を修正
 	[HSP3Dish][iOS] iAdによる広告収益アプリに対応
 	[HSP3Dish] 特定のデバイス制御用のdevinfo,devprm,devcontrol命令を追加
 	[HSP3Dish] サウンド関連のmmvol,mmpan命令を追加
