--- a/package/win32/doclib/history.txt
+++ b/package/win32/doclib/history.txt
@@ -5,6 +5,14 @@ Hot Soup Processor ver3.4                           HSP : Hot Soup Processor
 
 ・hsp3関連 更新履歴
 
+	2013/05/10 3.4β2
+
+	[HSP3Dish][android] アプリのレジューム時にテクスチャデータが復帰しないことがある不具合を修正
+	[HSP3Dish][android] HSP3Dish helperで新規プロジェクト作成が失敗することがある不具合を修正
+	[HSP3Dish][android] getreq命令でPLATFORM_ANDROIDが正しく取得できない不具合を修正
+	[HSP3Dish][android] AdMobによる広告収益アプリに仮対応
+	[HSP3Dish][iOS] iAdの表示が行なわれないことがある不具合を修正
+
 	2013/04/16 3.4β1
 
 	llmod3/winver.hspでエラーが発生する不具合を修正
