--- a/package/win32/doclib/history.txt
+++ b/package/win32/doclib/history.txt
@@ -5,8 +5,10 @@ Hot Soup Processor ver3.4                           HSP : Hot Soup Processor
 
 ・hsp3関連 更新履歴
 
-	2013/06/17 3.4β2
+	2013/07/03 3.4β2
 
+	windowsの終了セッションにHSPランタイムが残ってしまう不具合を修正
+	on gosub～命令の指定先でend命令が認識されない不具合を修正(BT#263)
 	[HGIMG4] 最初のバージョンを同梱
 	[HSP3Dish] Windows版でmp3のボリューム設定が反映されないことがある不具合を修正
 	[HSP3Dish][android] アプリのレジューム時にテクスチャデータが復帰しないことがある不具合を修正
