--- a/package/win32/doclib/history.txt
+++ b/package/win32/doclib/history.txt
@@ -5,12 +5,15 @@ Hot Soup Processor ver3.4                           HSP : Hot Soup Processor
 
 ・hsp3関連 更新履歴
 
-	2013/10/03 3.4β3
+	2013/10/07 3.4β3
 
+	[HSP3Dish][iOS] iOS7上でフォントの描画時に落ちることがあった不具合を修正
+	[HSP3Dish][Win] 再生前に設定した音量がmp3等の音楽ファイルで適用されない不具合を修正
 	[HSP3Dish][Win] mp3等の音楽ファイルでループ再生後に音量が戻ってしまう不具合を修正
 	[HSP3Dish][Win] 再生前に設定した音量がmp3等の音楽ファイルで適用されない不具合を修正
 	[HSP3Dish] 画面内にボタンが存在すると、mes命令のフォントが変更される不具合を修正
 	[HSP3Dish] clrobj命令が機能していなかった不具合を修正
+	ドキュメントの一部修正
 
 	2013/07/10 3.4β2
 
