--- a/package/win32/doclib/history.txt
+++ b/package/win32/doclib/history.txt
@@ -5,9 +5,11 @@ Hot Soup Processor ver3.4                           HSP : Hot Soup Processor
 
 ・hsp3関連 更新履歴
 
-	2013/10/07 3.4β3
+	2013/10/08 3.4β3
 
-	[HSP3Dish][iOS] iOS7上でフォントの描画時に落ちることがあった不具合を修正
+	[HSP3Dish][iOS] XCode5でビルドした際にフォントの描画時落ちることがあった不具合を修正
+	[HSP3Dish][iOS] XCode5及びiOS7対応のランタイム更新
+	[HSP3Dish][iOS] AdMobによる広告収益アプリに対応
 	[HSP3Dish][Win] 再生前に設定した音量がmp3等の音楽ファイルで適用されない不具合を修正
 	[HSP3Dish][Win] mp3等の音楽ファイルでループ再生後に音量が戻ってしまう不具合を修正
 	[HSP3Dish][Win] 再生前に設定した音量がmp3等の音楽ファイルで適用されない不具合を修正
