--- a/package/win32/doclib/history.txt
+++ b/package/win32/doclib/history.txt
@@ -5,8 +5,12 @@ Hot Soup Processor ver3.4                           HSP : Hot Soup Processor
 
 ・hsp3関連 更新履歴
 
-	2013/10/08 3.4β3
+	2014/01/11 3.4β3
 
+	画像をプリンタで印刷するための新規プラグインhspprintを追加
+	[HGIMG3] hgbye命令で終了後に再びhgini命令で初期化した際に正しくウインドウサイズが反映されない不具合を修正
+	[HSP3Dish][iOS] HSP3Dish helperからのXCode5プロジェクト出力に対応
+	[HSP3Dish][iOS] iAdによる広告が正しく出ないことがある不具合を修正
 	[HSP3Dish][iOS] XCode5でビルドした際にフォントの描画時落ちることがあった不具合を修正
 	[HSP3Dish][iOS] XCode5及びiOS7対応のランタイム更新
 	[HSP3Dish][iOS] AdMobによる広告収益アプリに対応
