--- a/package/win32/doclib/history.txt
+++ b/package/win32/doclib/history.txt
@@ -5,13 +5,15 @@ Hot Soup Processor ver3.4                           HSP : Hot Soup Processor
 
 ・hsp3関連 更新履歴
 
-	2014/04/22 3.4β4
+	2014/04/24 3.4β4
 
 	スクリプト中の全角スペースをスペース・タブと同様に無視するように修正
 	スクリプト中の全角スペースを無視する設定スイッチを#cmpoptに追加
 	オブジェクトファイルに不要な行番号情報が出力されないように修正
 	デバッグ時のオブジェクトファイルにラベル名と引数名を記録するように修正(fujidig)
 	イージング制御のための、setease命令、getease、geteasef関数を標準で追加
+	[OBAQ] qspeed命令のoptionパラメーター値を追加、ヘルプを修正
+	[HSP3Dish][iOS] Universalアプリ対応についてのドキュメントを追加
 	[HSP3Dish][android] android-ndk-r9以降で正しくコンパイルが通るように修正
 	[HSP3Dish][android][iOS] UTF8文字列を正しく扱うように修正
 	[HSP3Dish][android][iOS] getstr命令、メモリノートパッド命令が認識する改行コードにLF(コード10)を追加
