--- a/package/win32/doclib/history.txt
+++ b/package/win32/doclib/history.txt
@@ -5,9 +5,10 @@ Hot Soup Processor ver3.4                           HSP : Hot Soup Processor
 
 ・hsp3関連 更新履歴
 
-	2014/07/02 3.4β5
+	2014/07/04 3.4β5
 
 	userdef.as及びhspdef.asの定義が多い場合にエディタが起動できなくなる不具合を修正
+	hspsockプラグインでサーバーが同一ポートを共有できるように修正
 	変数名に付加された全角スペースが無視されない不具合を修正
 	[HSP3Dish][Win] hsp3dish.iniファイルが空の場合に落ちる不具合を修正
 	[HSP3Dish][iOS] β4版で画面スケーリングの設定が正しく行なわれない不具合を修正
