--- a/package/win32/doclib/history.txt
+++ b/package/win32/doclib/history.txt
@@ -5,10 +5,11 @@ Hot Soup Processor ver3.5                           HSP : Hot Soup Processor
 
 ・hsp3関連 更新履歴
 
-	2015/02/04 3.5 beta1
+	2015/02/05 3.5 beta1
 
 	64bit(x64)版ランタイム、hsp3_64を追加
 	HSP3Dishのnote系命令で行数を間違える不具合を修正
+	HSPDAプラグインのsortval,sortstr,sortnote,sortgetを標準命令として実装
 	新規プリプロセッサ命令、#bootoptを追加
 	#bootopt命令によるタイマー精度の設定変更に対応
 	[HSP3Dish][iOS] 最新のiOS及び64bitバイナリのビルド(arm64)に対応
