--- a/package/win32/doclib/history.txt
+++ b/package/win32/doclib/history.txt
@@ -5,18 +5,20 @@ Hot Soup Processor ver3.5                           HSP : Hot Soup Processor
 
 ・hsp3関連 更新履歴
 
-	2015/02/05 3.5 beta1
+	2015/02/09 3.5 beta1
 
 	64bit(x64)版ランタイム、hsp3_64を追加
 	HSP3Dishのnote系命令で行数を間違える不具合を修正
 	HSPDAプラグインのsortval,sortstr,sortnote,sortgetを標準命令として実装
 	新規プリプロセッサ命令、#bootoptを追加
 	#bootopt命令によるタイマー精度の設定変更に対応
+	[HSP3Dish] (Windows以外)grect命令の半透明カラー描画が正しく反映されない不具合を修正
 	[HSP3Dish][iOS] 最新のiOS及び64bitバイナリのビルド(arm64)に対応
 	[HSP3Dish][android] NDK r10、AdMobの更新に対応
 	[HSP3Dish][android] hsp3dish.iniの設定取り込みに対応
 	[HSP3Dish][android] HSP3Dish Helperの更新
 	[HSP3Dish][Windows] (Windows版のみ)プラグイン・外部DLL使用を可能に修正
+	長いソースのコンパイル高速化(zakki)
 
 	2014/09/19 3.4(rc2)
 
