--- a/package/win32/doclib/history.txt
+++ b/package/win32/doclib/history.txt
@@ -5,7 +5,7 @@ Hot Soup Processor ver3.5                           HSP : Hot Soup Processor
 
 ・hsp3関連 更新履歴
 
-	2015/02/09 3.5 beta1
+	2015/02/12 3.5 beta1
 
 	64bit(x64)版ランタイム、hsp3_64を追加
 	HSP3Dishのnote系命令で行数を間違える不具合を修正
@@ -17,6 +17,7 @@ Hot Soup Processor ver3.5                           HSP : Hot Soup Processor
 	[HSP3Dish][android] NDK r10、AdMobの更新に対応
 	[HSP3Dish][android] hsp3dish.iniの設定取り込みに対応
 	[HSP3Dish][android] HSP3Dish Helperの更新
+	[HSP3Dish][Windows] httpload,httpinfo命令を追加
 	[HSP3Dish][Windows] (Windows版のみ)プラグイン・外部DLL使用を可能に修正
 	長いソースのコンパイル高速化(zakki)
 
