--- a/package/win32/doclib/history.txt
+++ b/package/win32/doclib/history.txt
@@ -5,9 +5,11 @@ Hot Soup Processor ver3.5                           HSP : Hot Soup Processor
 
 ・hsp3関連 更新履歴
 
-	2015/03/03 3.5 beta2
+	2015/03/04 3.5 beta2
 
 	64bit(x64)版ランタイムのDLL呼び出しに対応
+	64bit(x64)版ランタイムのinput命令でエラーが発生する不具合を修正
+	64bit(x64)版ランタイムでモジュール変数使用時にエラーが発生する不具合を修正
 	HSP3ソースコンバーターで配列展開に失敗する不具合を修正(Mantis:0000011)
 	HSP3ソースコンバーターで演算の最適化時にスタックに不整合が起こる不具合を修正
 	スクリプトエディタのSDK機能の一部(HSED_GETCARETLINEとHSED_GETCARETPOS)を有効化
