--- a/package/win32/doclib/history.txt
+++ b/package/win32/doclib/history.txt
@@ -5,11 +5,11 @@ Hot Soup Processor ver3.5                           HSP : Hot Soup Processor
 
 ・hsp3関連 更新履歴
 
-	2015/03/04 3.5 beta2
+	2015/03/13 3.5 beta2
 
 	複数行文字列から特定の文字列を持つ行を検索するnotefind関数を追加
 	いくつかのサンプルスクリプトを追加
-	PNG画像デコーダーstb_imageを2.02に更新
+	画像ファイルデコーダーを更新、1,2,4bit PNGに対応
 	64bit(x64)版ランタイムのDLL呼び出しに対応
 	64bit(x64)版ランタイムのinput命令でエラーが発生する不具合を修正
 	64bit(x64)版ランタイムでモジュール変数使用時にエラーが発生する不具合を修正
@@ -18,6 +18,7 @@ Hot Soup Processor ver3.5                           HSP : Hot Soup Processor
 	スクリプトエディタのSDK機能の一部(HSED_GETCARETLINEとHSED_GETCARETPOS)を有効化
 	[HSP3Dish][iOS] 64bit環境の実行時にEXC_BAD_ACCESSが発生する不具合を修正
 	ドキュメントの一部修正
+	[HSP3Dish][android] beta1でmes命令の後でgcopy命令が正しく表示されない不具合を修正
 
 	2015/02/18 3.5 beta1
 
