--- a/package/win32/doclib/history.txt
+++ b/package/win32/doclib/history.txt
@@ -5,8 +5,9 @@ Hot Soup Processor ver3.5                           HSP : Hot Soup Processor
 
 ・hsp3関連 更新履歴
 
-	2015/03/18 3.5 beta2
+	2015/03/20 3.5 beta2
 
+	[HGIMG4] テクスチャを複数読み込んだ際に落ちる不具合を修正
 	beta1でobjimage命令が正しく動作しない不具合を修正
 	複数行文字列から特定の文字列を持つ行を検索するnotefind関数を追加
 	いくつかのサンプルスクリプトを追加
