--- a/package/win32/doclib/history.txt
+++ b/package/win32/doclib/history.txt
@@ -5,9 +5,9 @@ Hot Soup Processor ver3.5                           HSP : Hot Soup Processor
 
 ・hsp3関連 更新履歴
 
-	2015/05/07 3.5 beta2
+	2015/05/20 3.5 beta2
 
-	[HGIMG4] テクスチャを複数読み込んだ際に落ちる不具合を修正
+	[HGIMG4] テクスチャを複数読み込んだ際にエラーが発生する不具合を修正
 	[HGIMG4] DirectX9 API使用のランタイム(hsp3gpdx)を追加
 	[HSP3Dish] HGIMG4と同等のsetcls、celputm命令をサポート
 	[HSP3Dish][Windows] β1版でwavファイルが再生されないことがある不具合を修正
@@ -23,6 +23,7 @@ Hot Soup Processor ver3.5                           HSP : Hot Soup Processor
 	スクリプトエディタのSDK機能の一部(HSED_GETCARETLINEとHSED_GETCARETPOS)を有効化
 	[HSP3Dish][iOS] 64bit環境の実行時にEXC_BAD_ACCESSが発生する不具合を修正
 	ドキュメントの一部修正
+	[HSP3Dish][android] dpmファイルが認識されないことがある不具合を修正
 	[HSP3Dish][android] beta1でmes命令の後でgcopy命令が正しく表示されない不具合を修正
 
 	2015/02/18 3.5 beta1
