--- a/package/win32/doclib/history.txt
+++ b/package/win32/doclib/history.txt
@@ -8,6 +8,7 @@ Hot Soup Processor ver3.5                           HSP : Hot Soup Processor
 	2015/09/21 3.5 beta3
 
 	オフィシャル珠音2D素材(tamadot)を同梱
+	デバッグウインドウにコールバックタブを追加
 	[HSP3Dish][android][iOS] エラー発生時に番号とメッセージを出力するように修正
 	[HSP3Dish][android] ビルド時にHSPライブラリフォルダを参照する方法に変更
 	[HSP3Dish][android] β2版でAdMobビルドが正しくできなかった不具合を修正
