--- a/package/win32/doclib/history.txt
+++ b/package/win32/doclib/history.txt
@@ -5,14 +5,17 @@ Hot Soup Processor ver3.5                           HSP : Hot Soup Processor
 
 ・hsp3関連 更新履歴
 
-	2015/09/21 3.5 beta3
+	2015/11/10 3.5 beta3
 
 	オフィシャル珠音2D素材(tamadot)を同梱
-	デバッグウインドウにコールバックタブを追加
+	デバッグウインドウにコールスタックタブを追加
 	[HSP3Dish][android][iOS] エラー発生時に番号とメッセージを出力するように修正
 	[HSP3Dish][android] ビルド時にHSPライブラリフォルダを参照する方法に変更
 	[HSP3Dish][android] β2版でAdMobビルドが正しくできなかった不具合を修正
 	[HSP3Dish][android] HGIMG4使用プロジェクトに対応
+	[HSP3Dish][android] JDK7以降での署名に対応
+	[HSP3Dish][android] zipalignツールの存在を確認するように修正
+	[HSP3Dish][android] ダイアログ以外の部分をタッチすると停止する不具合を修正
 
 	ue_daiさんによるOpenHSPバグ修正を反映
 	[hsp3] 連想配列型のarray/local引数エイリアスを添字をつけずに参照したときに落ちるバグを修正
