--- a/package/win32/doclib/history.txt
+++ b/package/win32/doclib/history.txt
@@ -5,10 +5,11 @@ Hot Soup Processor ver3.5                           HSP : Hot Soup Processor
 
 ・hsp3関連 更新履歴
 
-	2015/11/10 3.5 beta3
+	2015/12/15 3.5 beta3
 
 	オフィシャル珠音2D素材(tamadot)を同梱
 	デバッグウインドウにコールスタックタブを追加
+	[HSP3Dish] 画像コピー時の色乗算値を指定するgmulcolor命令を追加
 	[HSP3Dish][android][iOS] エラー発生時に番号とメッセージを出力するように修正
 	[HSP3Dish][android] ビルド時にHSPライブラリフォルダを参照する方法に変更
 	[HSP3Dish][android] β2版でAdMobビルドが正しくできなかった不具合を修正
@@ -16,6 +17,7 @@ Hot Soup Processor ver3.5                           HSP : Hot Soup Processor
 	[HSP3Dish][android] JDK7以降での署名に対応
 	[HSP3Dish][android] zipalignツールの存在を確認するように修正
 	[HSP3Dish][android] ダイアログ以外の部分をタッチすると停止する不具合を修正
+	[HSP3Dish][Windows] mmvol命令による音量が種類によって異なっていたのを修正
 
 	ue_daiさんによるOpenHSPバグ修正を反映
 	[hsp3] 連想配列型のarray/local引数エイリアスを添字をつけずに参照したときに落ちるバグを修正
