--- a/package/win32/doclib/history.txt
+++ b/package/win32/doclib/history.txt
@@ -1,17 +1,18 @@
 ------------------------------------------------------------------------------
 Hot Soup Processor ver3.5                           HSP : Hot Soup Processor  
-更新履歴                              copyright 1997-2015 (c) onion software  
+更新履歴                              copyright 1997-2016 (c) onion software  
 ------------------------------------------------------------------------------
 
 ・hsp3関連 更新履歴
 
-	2015/12/22 3.5 beta3
+	2016/01/19 3.5 beta3
 
 	オフィシャル珠音2D素材(tamadot)を同梱
 	デバッグウインドウにコールスタックタブを追加
 	[HSP3Dish] 画像コピー時の色乗算値を指定するgmulcolor命令を追加
 	[HSP3Dish][iOS] 64bit環境の実行時エラーを修正
 	[HSP3Dish][android][iOS] エラー発生時に番号とメッセージを出力するように修正
+	[HSP3Dish][android] 推奨SDKをAndroid 5.0.1 (API 21)に変更
 	[HSP3Dish][android] ビルド時にHSPライブラリフォルダを参照する方法に変更
 	[HSP3Dish][android] β2版でAdMobビルドが正しくできなかった不具合を修正
 	[HSP3Dish][android] HGIMG4使用プロジェクトに対応
