--- a/package/win32/doclib/history.txt
+++ b/package/win32/doclib/history.txt
@@ -5,6 +5,13 @@ Hot Soup Processor ver3.5                           HSP : Hot Soup Processor
 
 ・hsp3関連 更新履歴
 
+	2016/06/10 3.5 beta4
+
+	スクリプトエディタのツールメニューを整理(非推奨機能をサブメニューに移動)
+	拡張プラグインサンプルhpi3sample.asが動作しない不具合を修正
+	mesbox,input命令による入力ボックスから32767以上の文字列を取得できない不具合を修正
+	strrep命令を入れ子にすると意図した動作をしない不具合を修正(HSP3BT#17)
+
 	2016/01/19 3.5 beta3
 
 	オフィシャル珠音2D素材(tamadot)を同梱
