--- a/package/win32/doclib/history.txt
+++ b/package/win32/doclib/history.txt
@@ -5,14 +5,31 @@ Hot Soup Processor ver3.5                           HSP : Hot Soup Processor
 
 ・hsp3関連 更新履歴
 
-	2016/06/30 3.5 beta4
+	2016/07/06 3.5 beta4
 
 	シリアル接続によるarduino制御のためのモジュール、arduino.asを追加
 	hspextプラグインにバイナリデータを送信を行なうcomputb命令を追加
 	スクリプトエディタのツールメニューを整理(非推奨機能をサブメニューに移動)
+	ソースに全角文字がある際にスクリプトエディタのラベル一覧で正しくラベルが検出されなくなる不具合を修正
 	拡張プラグインサンプルhpi3sample.asが動作しない不具合を修正
 	mesbox,input命令による入力ボックスから32767以上の文字列を取得できない不具合を修正
 	strrep命令を入れ子にすると意図した動作をしない不具合を修正(HSP3BT#17)
+	文字列をUTF8で出力するオプションを#cmdopt命令に追加
+
+	tds12さんによるOpenHSP修正を反映
+	デバッグウィンドウをUTF8文字コードに対応
+
+	ue_daiさんによるOpenHSPバグ修正と機能拡張を反映
+	[hsp3][Windows] oncmd命令で未登録のウインドウメッセージが有効化できる不具合を修正
+	[hsp3][Windows] stick,getkey命令をシステムのマウスクリックの左右反転設定に対応
+	[hsp3] logmes命令がmes命令と同様に任意の型の値を受け取るように修正
+	[hsp3] limit,limitf関数の下限、上限のパラメータを省略可能に修正
+	[hsp3] 配列変数の要素拡張を高速化
+	[hsp3] varptr関数実行時に変数のバッファサイズをシステム変数strsizeに返すように修正
+	[hsp3_64] モジュール変数のデータ(STRUCTPRM)が破損する問題を修正
+	[hspcmp] β3のプリプロセッサーが「{」「}」を文の区切り記号として解釈する変更を取り消し(ソース非互換が発生するため)
+	[hspcmp] β3のコンパイラでエラーが発生することがある不具合を修正
+	スクリプトエディタのフォント設定がASCII文字にしか適用されていなかった問題を修正
 
 	2016/01/19 3.5 beta3
 
