--- a/package/win32/doclib/history.txt
+++ b/package/win32/doclib/history.txt
@@ -5,7 +5,7 @@ Hot Soup Processor ver3.5                           HSP : Hot Soup Processor
 
 ・hsp3関連 更新履歴
 
-	2016/07/06 3.5 beta4
+	2016/07/07 3.5 beta4
 
 	シリアル接続によるarduino制御のためのモジュール、arduino.asを追加
 	hspextプラグインにバイナリデータを送信を行なうcomputb命令を追加
@@ -15,8 +15,10 @@ Hot Soup Processor ver3.5                           HSP : Hot Soup Processor
 	mesbox,input命令による入力ボックスから32767以上の文字列を取得できない不具合を修正
 	strrep命令を入れ子にすると意図した動作をしない不具合を修正(HSP3BT#17)
 	文字列をUTF8で出力するオプションを#cmdopt命令に追加
+	[HSP3Dish][Windows] mmstat命令でwavファイル以外の再生状態取得ができなかった不具合を修正
 
 	tds12さんによるOpenHSP修正を反映
+	UTF8版hsp3ランタイムを同梱
 	デバッグウィンドウをUTF8文字コードに対応
 
 	ue_daiさんによるOpenHSPバグ修正と機能拡張を反映
