--- a/package/win32/doclib/history.txt
+++ b/package/win32/doclib/history.txt
@@ -5,6 +5,10 @@ Hot Soup Processor ver3.5                           HSP : Hot Soup Processor
 
 ・hsp3関連 更新履歴
 
+	2016/08/08 3.5 beta4a
+
+	外部DLLに渡すwstr,sptr型のパラメーターが正しく動作していない不具合を修正	β4版でoncmd命令が正しく使用できない不具合を修正
+
 	2016/07/29 3.5 beta4
 
 	オフィシャル珠音2D素材(tamaface)とサンプルゲームを追加
