--- a/package/win32/doclib/history.txt
+++ b/package/win32/doclib/history.txt
@@ -5,8 +5,10 @@ Hot Soup Processor ver3.5                           HSP : Hot Soup Processor
 
 ・hsp3関連 更新履歴
 
-	2016/09/02 3.5 beta5
+	2016/09/29 3.5 beta5
 
+	β4版でDLL呼び出しエラーが起動時にチェックされていた不具合を修正
+	hsp3clのprint命令で第2パラメーターに1を指定した場合、改行コードを出力しないように修正
 	DupPtrを入れ子にすると正常に動作しない問題を修正
 	[hsp3_64] ObjImageでランタイムがクラッシュする問題を修正
 	[hsp3_64] リストボックス、コンボボックスが正常に動作しない問題を修正
