--- a/package/win32/doclib/history.txt
+++ b/package/win32/doclib/history.txt
@@ -5,9 +5,11 @@ Hot Soup Processor ver3.5                           HSP : Hot Soup Processor
 
 ・hsp3関連 更新履歴
 
-	2016/10/05 3.5 beta5
+	2016/12/08 3.5 beta5
 
 	[HSP3Dish][android] hsp3dhで長いソースのビルド時にエラーが発生する不具合を修正
+	[HSP3Dish][iOS][android] #deffuncで配列をvarで渡した場合、値が正しく取得できないことがある不具合を修正
+	[HGIMG3] β4版でlogmes命令が使えなくなっていた不具合を修正
 	β4版でDLL呼び出しエラーが起動時にチェックされていた不具合を修正
 	print命令で第2パラメーターに1を指定した場合、改行しない機能を追加
 	DupPtrを入れ子にすると正常に動作しない問題を修正
