--- a/package/win32/doclib/history.txt
+++ b/package/win32/doclib/history.txt
@@ -5,8 +5,10 @@ Hot Soup Processor ver3.5                           HSP : Hot Soup Processor
 
 ・hsp3関連 更新履歴
 
-	2016/12/08 3.5 beta5
+	2017/01/12 3.5 beta5
 
+	[hsp3] varptr関数で変数のバッファサイズをシステム変数strsizeに返す仕様を撤回、varsize関数を追加して取得できるように修正
+	[HSP3Dish][iOS] XCode上で実機用にコンパイルした際にリンクエラーが出ることがある不具合を修正
 	[HSP3Dish][android] hsp3dhで長いソースのビルド時にエラーが発生する不具合を修正
 	[HSP3Dish][iOS][android] #deffuncで配列をvarで渡した場合、値が正しく取得できないことがある不具合を修正
 	[HGIMG3] β4版でlogmes命令が使えなくなっていた不具合を修正
