--- a/package/win32/doclib/history.txt
+++ b/package/win32/doclib/history.txt
@@ -1,12 +1,13 @@
 ------------------------------------------------------------------------------
 Hot Soup Processor ver3.5                           HSP : Hot Soup Processor  
-更新履歴                              copyright 1997-2016 (c) onion software  
+更新履歴                              copyright 1997-2017 (c) onion software  
 ------------------------------------------------------------------------------
 
 ・hsp3関連 更新履歴
 
-	2017/02/09 3.5 beta5
+	2017/02/21 3.5 beta5
 
+	スクリプトエディタのラベル一覧が途中までしか表示されないことがある不具合を修正
 	[hsp3] varptr関数で変数のバッファサイズをシステム変数strsizeに返す仕様を撤回、varsize関数を追加して取得できるように修正
 	[HGIMG4] ゲームエンジンを更新、いくつかの命令を追加。詳細はhgimg4.txtをご覧ください
 	[HSP3Dish][Linux] Linux版を追加
