--- a/package/win32/doclib/history.txt
+++ b/package/win32/doclib/history.txt
@@ -5,8 +5,9 @@ Hot Soup Processor ver3.5                           HSP : Hot Soup Processor
 
 ・hsp3関連 更新履歴
 
-	2017/02/21 3.5 beta5
+	2017/02/27 3.5 beta5
 
+	[HSP3CNV] 長い関数名の使用時にCコード生成に失敗することがある不具合を修正
 	スクリプトエディタのラベル一覧が途中までしか表示されないことがある不具合を修正
 	[hsp3] varptr関数で変数のバッファサイズをシステム変数strsizeに返す仕様を撤回、varsize関数を追加して取得できるように修正
 	[HGIMG4] ゲームエンジンを更新、いくつかの命令を追加。詳細はhgimg4.txtをご覧ください
