--- a/package/win32/doclib/history.txt
+++ b/package/win32/doclib/history.txt
@@ -5,7 +5,7 @@ Hot Soup Processor ver3.5                           HSP : Hot Soup Processor
 
 ・hsp3関連 更新履歴
 
-	2017/03/15 3.5 beta5
+	2017/03/17 3.5 beta5
 
 	[HSP3CNV] 長い関数名の使用時にCコード生成に失敗することがある不具合を修正
 	スクリプトエディタのラベル一覧が途中までしか表示されないことがある不具合を修正
@@ -18,6 +18,7 @@ Hot Soup Processor ver3.5                           HSP : Hot Soup Processor
 	[HSP3Dish][android] firebaseベースのAdMobに対応、インタースティシャル広告の表示に対応
 	[HSP3Dish][android] hsp3dhで長いソースのビルド時にエラーが発生する不具合を修正
 	[HSP3Dish][android] 加速度・ジャイロセンサー値の取得に対応
+	[HSP3Dish][android] 一部の機種でテクスチャが正しく設定されなくなる不具合を修正
 	[HSP3Dish][iOS][android] #deffuncで配列をvarで渡した場合、値が正しく取得できないことがある不具合を修正
 	[HGIMG3] β4版でlogmes命令が使えなくなっていた不具合を修正
 	β4版でDLL呼び出しエラーが起動時にチェックされていた不具合を修正
