--- a/package/win32/doclib/history.txt
+++ b/package/win32/doclib/history.txt
@@ -5,8 +5,10 @@ Hot Soup Processor ver3.6                           HSP : Hot Soup Processor
 
 ・hsp3関連 更新履歴
 
-	2021/06/03 3.6 RC1
+	2021/06/11 3.6 RC1
 
+	標準スプライトのes_fade命令にαチャンネルのフェード機能を追加
+	標準スプライトのes_draw命令がstatに値を返すように修正
 	[hspext] dirlist2命令の戻り値(ファイル数)が少なくなる不具合を修正
 	[hsp3utf] プラグインに渡されるBMSCR構造体のサイズが一部ずれていた不具合を修正
 	hsedsdkのサービス、HspFunc_getobj/HspFunc_setobjのオブジェクトID範囲チェックを追加
