--- a/package/win32/doclib/history.txt
+++ b/package/win32/doclib/history.txt
@@ -5,8 +5,10 @@ Hot Soup Processor ver3.6                           HSP : Hot Soup Processor
 
 ・hsp3関連 更新履歴
 
-	2021/06/13 3.6 RC1
+	2021/06/14 3.6 RC1
 
+	[HGIMG4][Windows] β5版でウインドウアイコンが表示されない不具合を修正
+	[HGIMG4][Windows] β5版でフルスクリーンの指定が動作しない不具合を修正
 	[HSP3Dish] 標準スプライトで自動回転・ズームを行うためのes_arot命令を追加
 	[HSP3Dish] 標準スプライトのes_fade命令にαチャンネルのフェード機能を追加
 	[HSP3Dish] 標準スプライトのes_draw命令がstatに値を返すように修正
