--- a/package/win32/doclib/history.txt
+++ b/package/win32/doclib/history.txt
@@ -5,8 +5,10 @@ Hot Soup Processor ver3.6                           HSP : Hot Soup Processor
 
 ・hsp3関連 更新履歴
 
-	2021/07/01 3.6 RC1
+	2021/07/15 3.6 RC1
 
+	[HGIMG4] 3Dモデルの階層情報を取得するgpnodeinfo命令を追加
+	[HSP3Dish] 標準スプライトのes_setparent命令を実装
 	スクリプトエディタのユーザー色分け設定がラベルに反映されない不具合を修正
 	β2版でmouse命令の動作が過去のものと異なっていたのを修正、ヘルプに追記
 	[HGIMG4][Windows] gpreset命令実行時のメモリリークを修正
