--- a/package/win32/doclib/history.txt
+++ b/package/win32/doclib/history.txt
@@ -5,6 +5,10 @@ Hot Soup Processor ver3.6                           HSP : Hot Soup Processor
 
 ・hsp3関連 更新履歴
 
+	2021/07/23 3.6 RC2
+
+	winobj命令で生成されたウインドウに色の変更メッセージが送られる不具合を修正
+
 	2021/07/15 3.6 RC1
 
 	[HGIMG4] 3Dモデルの階層情報を取得するgpnodeinfo命令を追加
