--- a/package/win32/doclib/history.txt
+++ b/package/win32/doclib/history.txt
@@ -5,8 +5,9 @@ Hot Soup Processor ver3.7beta                       HSP : Hot Soup Processor
 
 ・hsp3関連 更新履歴
 
-	2022/01/14 3.7 beta1
+	2022/01/17 3.7 beta1
 
+	hspextプラグインのpipeexec、pipeget命令のオプションを追加
 	アルファチャンネルを含む.pngファイルの読み込み時にブレンドの誤差が起こる不具合を修正
 	hsp3cランタイムの運用を廃止、Peasエディタの同梱を廃止
 	HSPスクリプトエディタのレガシーメニューを廃止
