--- a/package/win32/doclib/history.txt
+++ b/package/win32/doclib/history.txt
@@ -5,6 +5,10 @@ Hot Soup Processor ver3.7beta                       HSP : Hot Soup Processor
 
 ・hsp3関連 更新履歴
 
+	2022/03/10 3.7 beta2
+
+	button gosubによるボタン処理時にエラーが発生した際にウインドウが閉じる不具合を修正
+
 	2022/01/17 3.7 beta1
 
 	hspextプラグインのpipeexec、pipeget命令のオプションを追加
