--- a/package/win32/doclib/history.txt
+++ b/package/win32/doclib/history.txt
@@ -5,9 +5,10 @@ Hot Soup Processor ver3.7beta                       HSP : Hot Soup Processor
 
 ・hsp3関連 更新履歴
 
-	2022/03/10 3.7 beta2
+	2022/03/18 3.7 beta2
 
 	button gosubによるボタン処理時にエラーが発生した際にウインドウが閉じる不具合を修正
+	[HSP3Dish] mmload命令でwavファイルを同じIDに読み込む際にメモリリークが起こる不具合を修正
 
 	2022/01/17 3.7 beta1
 
