--- a/package/win32/doclib/history.txt
+++ b/package/win32/doclib/history.txt
@@ -5,8 +5,10 @@ Hot Soup Processor ver3.7beta                       HSP : Hot Soup Processor
 
 ・hsp3関連 更新履歴
 
-	2022/03/27 3.7 beta2
+	2022/04/07 3.7 beta2
 
+	DPMファイル及びexe埋め込みファイルにフォルダ名と長いファイル名が使用できるように修正
+	#pack,#epack命令のファイル指定に'*'記号によるワイルドカードが使用できるように修正
 	button gosubによるボタン処理時にエラーが発生した際にウインドウが閉じる不具合を修正
 	[HSP3Dish][hsp3js] HSP3.7beta1でstick命令の入力が正しく動作しなかった不具合を修正
 	[HSP3Dish][hsp3js] ブラウザのローカルストレージに保存するIDBFSサポートを追加
