--- a/package/win32/doclib/history.txt
+++ b/package/win32/doclib/history.txt
@@ -23,6 +23,7 @@ Hot Soup Processor ver3.7beta                       HSP : Hot Soup Processor
 	[HGIMG4] get～系の命令で指定された変数が配列の場合に要素が拡張されない不具合を修正
 	[HGIMG4] イベント内で複数のパラメーター変化を行った際にHGIMG3との差異が出る不具合を修正
 	[HGIMG4] OBJ_TIMERによるタイマーが正しく動作していなかった不具合を修正
+	[HGIMG4] 3Dモデルのclone時に正しくマテリアルがクローンされないことがある不具合を修正
 
 	2022/01/17 3.7 beta1
 
