--- a/package/win32/doclib/history.txt
+++ b/package/win32/doclib/history.txt
@@ -5,6 +5,10 @@ Hot Soup Processor ver3.7beta                       HSP : Hot Soup Processor
 
 ・hsp3関連 更新履歴
 
+	2022/06/07 3.7 beta3
+
+	β2版でbsave命令のオフセット指定が反映されていなかった不具合を修正
+
 	2022/06/02 3.7 beta2
 
 	HSPDAプラグインにバイナリデータ検索を行うbinmatch命令を追加
