--- a/package/win32/doclib/history.txt
+++ b/package/win32/doclib/history.txt
@@ -5,9 +5,10 @@ Hot Soup Processor ver3.7beta                       HSP : Hot Soup Processor
 
 ・hsp3関連 更新履歴
 
-	2022/06/07 3.7 beta3
+	2022/07/07 3.7 beta3
 
 	β2版でbsave命令のオフセット指定が反映されていなかった不具合を修正
+	HSPTV素材に16ドットサイズ珠音を追加
 
 	2022/06/02 3.7 beta2
 
