--- a/package/win32/doclib/history.txt
+++ b/package/win32/doclib/history.txt
@@ -5,10 +5,11 @@ Hot Soup Processor ver3.7beta                       HSP : Hot Soup Processor
 
 ・hsp3関連 更新履歴
 
-	2022/07/07 3.7 beta3
+	2022/08/30 3.7 beta3
 
+	[HSP3Dish][Windows] デバイスロストからの復帰時に画面クリアされない不具合を修正
 	β2版でbsave命令のオフセット指定が反映されていなかった不具合を修正
-	HSPTV素材に16ドットサイズ珠音を追加
+	珠音ドットフレームワーク及び16ドットサイズ珠音素材を追加
 
 	2022/06/02 3.7 beta2
 
