--- a/package/win32/doclib/history.txt
+++ b/package/win32/doclib/history.txt
@@ -5,11 +5,13 @@ Hot Soup Processor ver3.7beta                       HSP : Hot Soup Processor
 
 ・hsp3関連 更新履歴
 
-	2022/08/30 3.7 beta3
+	2022/09/07 3.7 beta3
 
+	β1版で複数のdpmファイル読み込み時にファイルが正しく検索されない不具合を修正
 	[HSP3Dish][Windows] デバイスロストからの復帰時に画面クリアされない不具合を修正
 	β2版でbsave命令のオフセット指定が反映されていなかった不具合を修正
 	珠音ドットフレームワーク及び16ドットサイズ珠音素材を追加
+	[HGIMG4] screen命令使用時にテクスチャキャッシュがクリアされない不具合を修正
 
 	2022/06/02 3.7 beta2
 
