--- a/package/win32/doclib/history.txt
+++ b/package/win32/doclib/history.txt
@@ -11,6 +11,7 @@ Hot Soup Processor ver3.7beta                       HSP : Hot Soup Processor
 	[HSP3Dish][Windows] デバイスロストからの復帰時に画面クリアされない不具合を修正
 	β2版でbsave命令のオフセット指定が反映されていなかった不具合を修正
 	珠音ドットフレームワーク及び16ドットサイズ珠音素材を追加
+	[HGIMG4] 複数のオブジェクトに同一のイベントを適用した際に正しく動作しないことがある不具合を修正
 	[HGIMG4] screen命令使用時にテクスチャキャッシュがクリアされない不具合を修正
 
 	2022/06/02 3.7 beta2
